fix(download): update device image path for download content style(logo): adjust vertical alignment of logo in layout fix(wordmark): correct vertical positioning of text in SVG

--- a/app/[lang]/layout.module.scss
+++ b/app/[lang]/layout.module.scss
@@ -82,7 +82,7 @@
   height: 1.85rem;
   width: auto;
   display: block;
-  transform: translateY(1px);
+  align-self: center;
 
   @media (min-width: 768px) {
     height: 2.2rem;
